Add Libraries for PostgreSQL + MySQL

--- a/Dashboard/nbproject/project.properties
+++ b/Dashboard/nbproject/project.properties
@@ -34,12 +34,16 @@ dist.jar=${dist.dir}/Dashboard.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.mysql-connector-java-5.1.47.jar=D:\\Progamme\\netbeans\\ide\\modules\\ext\\mysql-connector-java-5.1.47.jar
+file.reference.postgresql-42.2.5.jar=D:\\Progamme\\netbeans\\ide\\modules\\ext\\postgresql-42.2.5.jar
 includes=**
 # Non-JavaFX jar file creation is deactivated in JavaFX 2.0+ projects
 jar.archive.disabled=true
 jar.compress=false
 javac.classpath=\
-    ${javafx.classpath.extension}
+    ${javafx.classpath.extension}:\
+    ${file.reference.postgresql-42.2.5.jar}:\
+    ${file.reference.mysql-connector-java-5.1.47.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
