Add Libraries for PostgreSQL + MySQL

--- a/Dashboard/nbproject/project.properties
+++ b/Dashboard/nbproject/project.properties
@@ -33,7 +33,10 @@ dist.jar=${dist.dir}/Dashboard.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.mariadb-java-client-2.4.1.jar=lib\\mariadb-java-client-2.4.1.jar
+file.reference.mssql-jdbc-7.2.2.jre8.jar=lib\\mssql-jdbc-7.2.2.jre8.jar
 file.reference.mysql-connector-java-5.1.47.jar=lib\\mysql-connector-java-5.1.47.jar
+file.reference.ojdbc8.jar=lib\\ojdbc8.jar
 file.reference.postgresql-42.2.5.jar=lib\\postgresql-42.2.5.jar
 includes=**
 # Non-JavaFX jar file creation is deactivated in JavaFX 2.0+ projects
@@ -42,7 +45,10 @@ jar.compress=false
 javac.classpath=\
     ${javafx.classpath.extension}:\
     ${file.reference.postgresql-42.2.5.jar}:\
-    ${file.reference.mysql-connector-java-5.1.47.jar}
+    ${file.reference.mysql-connector-java-5.1.47.jar}:\
+    ${file.reference.ojdbc8.jar}:\
+    ${file.reference.mssql-jdbc-7.2.2.jre8.jar}:\
+    ${file.reference.mariadb-java-client-2.4.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
