Add JDBC ConnPooling +DataManger +Properties

--- a/Dashboard/nbproject/project.properties
+++ b/Dashboard/nbproject/project.properties
@@ -33,6 +33,10 @@ dist.jar=${dist.dir}/Dashboard.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.commons-dbcp2-2.6.0.jar=lib/commons-dbcp2-2.6.0.jar
+file.reference.commons-logging-1.2.jar=lib/commons-logging-1.2.jar
+file.reference.commons-pool2-2.6.2.jar=lib/commons-pool2-2.6.2.jar
+file.reference.Dashboard-properties=properties
 file.reference.mariadb-java-client-2.4.1.jar=lib\\mariadb-java-client-2.4.1.jar
 file.reference.mssql-jdbc-7.2.2.jre8.jar=lib\\mssql-jdbc-7.2.2.jre8.jar
 file.reference.mysql-connector-java-5.1.47.jar=lib\\mysql-connector-java-5.1.47.jar
@@ -44,11 +48,15 @@ jar.archive.disabled=true
 jar.compress=false
 javac.classpath=\
     ${javafx.classpath.extension}:\
+    ${file.reference.commons-dbcp2-2.6.0.jar}:\
+    ${file.reference.commons-logging-1.2.jar}:\
+    ${file.reference.commons-pool2-2.6.2.jar}:\
     ${file.reference.postgresql-42.2.5.jar}:\
     ${file.reference.mysql-connector-java-5.1.47.jar}:\
     ${file.reference.ojdbc8.jar}:\
     ${file.reference.mssql-jdbc-7.2.2.jre8.jar}:\
-    ${file.reference.mariadb-java-client-2.4.1.jar}
+    ${file.reference.mariadb-java-client-2.4.1.jar}:\
+    ${file.reference.Dashboard-properties}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -124,7 +132,6 @@ meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
 platform.active=default_platform
 run.classpath=\
-    ${dist.jar}:\
     ${javac.classpath}:\
     ${build.classes.dir}
 run.modulepath=\
