enhanced JDBC ConnPooling

--- a/Dashboard/properties/DBconnection.properties
+++ b/Dashboard/properties/DBconnection.properties
@@ -1,7 +1,15 @@
 # To change this license header, choose License Headers in Project Properties.
 # To change this template file, choose Tools | Templates
 # and open the template in the editor.
+
+#DB Connection Data
 JDBC_DRIVER = org.postgresql.Driver
 DB_URL = jdbc:postgresql://141.56.131.60/vwp
 USER = mesreader
 PASS = mesreaderpw
+
+#Config for JDBC Connection Pooling
+initialSize = 6
+maxSize = 12
+minIdle = 1
+maxIdle = 2
