--- a/Dashboard/nbproject/project.properties
+++ b/Dashboard/nbproject/project.properties
@@ -36,6 +36,7 @@ excludes=
 file.reference.commons-dbcp2-2.6.0.jar=lib/commons-dbcp2-2.6.0.jar
 file.reference.commons-logging-1.2.jar=lib/commons-logging-1.2.jar
 file.reference.commons-pool2-2.6.2.jar=lib/commons-pool2-2.6.2.jar
+file.reference.Dashboard-dataStorage=dataStorage
 file.reference.Dashboard-properties=properties
 file.reference.mariadb-java-client-2.4.1.jar=lib\\mariadb-java-client-2.4.1.jar
 file.reference.mssql-jdbc-7.2.2.jre8.jar=lib\\mssql-jdbc-7.2.2.jre8.jar
@@ -56,7 +57,8 @@ javac.classpath=\
     ${file.reference.ojdbc8.jar}:\
     ${file.reference.mssql-jdbc-7.2.2.jre8.jar}:\
     ${file.reference.mariadb-java-client-2.4.1.jar}:\
-    ${file.reference.Dashboard-properties}
+    ${file.reference.Dashboard-properties}:\
+    ${file.reference.Dashboard-dataStorage}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
