--- a/Dashboard/nbproject/project.properties
+++ b/Dashboard/nbproject/project.properties
@@ -38,20 +38,20 @@ file.reference.commons-logging-1.2.jar=lib/commons-logging-1.2.jar
 file.reference.commons-pool2-2.6.2.jar=lib/commons-pool2-2.6.2.jar
 file.reference.Dashboard-dataStorage=dataStorage
 file.reference.Dashboard-properties=properties
-file.reference.junit-jupiter-5.4.2.jar=/Daten/Dropbox/Studium/Semester_IV/Junit_src_files/junit-jupiter-5.4.2.jar
-file.reference.junit-jupiter-api-5.4.2.jar=/Daten/Dropbox/Studium/Semester_IV/Junit_src_files/junit-jupiter-api-5.4.2.jar
-file.reference.junit-jupiter-engine-5.4.2.jar=/Daten/Dropbox/Studium/Semester_IV/Junit_src_files/junit-jupiter-engine-5.4.2.jar
-file.reference.junit-jupiter-migrationsupport-5.4.2.jar=/Daten/Dropbox/Studium/Semester_IV/Junit_src_files/junit-jupiter-migrationsupport-5.4.2.jar
-file.reference.junit-jupiter-params-5.4.2.jar=/Daten/Dropbox/Studium/Semester_IV/Junit_src_files/junit-jupiter-params-5.4.2.jar
-file.reference.junit-platform-commons-1.4.2.jar=/Daten/Dropbox/Studium/Semester_IV/Junit_src_files/junit-platform-commons-1.4.2.jar
-file.reference.junit-platform-console-1.4.2.jar=/Daten/Dropbox/Studium/Semester_IV/Junit_src_files/junit-platform-console-1.4.2.jar
-file.reference.junit-platform-console-standalone-1.4.2.jar=/Daten/Dropbox/Studium/Semester_IV/Junit_src_files/junit-platform-console-standalone-1.4.2.jar
-file.reference.junit-platform-engine-1.4.2.jar=/Daten/Dropbox/Studium/Semester_IV/Junit_src_files/junit-platform-engine-1.4.2.jar
-file.reference.junit-platform-launcher-1.4.2.jar=/Daten/Dropbox/Studium/Semester_IV/Junit_src_files/junit-platform-launcher-1.4.2.jar
-file.reference.junit-platform-reporting-1.4.2.jar=/Daten/Dropbox/Studium/Semester_IV/Junit_src_files/junit-platform-reporting-1.4.2.jar
-file.reference.junit-platform-runner-1.4.2.jar=/Daten/Dropbox/Studium/Semester_IV/Junit_src_files/junit-platform-runner-1.4.2.jar
-file.reference.junit-platform-suite-api-1.4.2.jar=/Daten/Dropbox/Studium/Semester_IV/Junit_src_files/junit-platform-suite-api-1.4.2.jar
-file.reference.junit-platform-testkit-1.4.2.jar=/Daten/Dropbox/Studium/Semester_IV/Junit_src_files/junit-platform-testkit-1.4.2.jar
+file.reference.junit-jupiter-5.4.2.jar=lib\\junit-jupiter-5.4.2.jar
+file.reference.junit-jupiter-api-5.4.2.jar=lib\\junit-jupiter-api-5.4.2.jar
+file.reference.junit-jupiter-engine-5.4.2.jar=lib\\junit-jupiter-engine-5.4.2.jar
+file.reference.junit-jupiter-migrationsupport-5.4.2.jar=lib\\junit-jupiter-migrationsupport-5.4.2.jar
+file.reference.junit-jupiter-params-5.4.2.jar=lib\\junit-jupiter-params-5.4.2.jar
+file.reference.junit-platform-commons-1.4.2.jar=lib\\junit-platform-commons-1.4.2.jar
+file.reference.junit-platform-console-1.4.2.jar=lib\\junit-platform-console-1.4.2.jar
+file.reference.junit-platform-console-standalone-1.4.2.jar=lib\\junit-platform-console-standalone-1.4.2.jar
+file.reference.junit-platform-engine-1.4.2.jar=lib\\junit-platform-engine-1.4.2.jar
+file.reference.junit-platform-launcher-1.4.2.jar=lib\\junit-platform-launcher-1.4.2.jar
+file.reference.junit-platform-reporting-1.4.2.jar=lib\\junit-platform-reporting-1.4.2.jar
+file.reference.junit-platform-runner-1.4.2.jar=lib\\junit-platform-runner-1.4.2.jar
+file.reference.junit-platform-suite-api-1.4.2.jar=lib\\junit-platform-suite-api-1.4.2.jar
+file.reference.junit-platform-testkit-1.4.2.jar=lib\\junit-platform-testkit-1.4.2.jar
 file.reference.mariadb-java-client-2.4.1.jar=lib\\mariadb-java-client-2.4.1.jar
 file.reference.mssql-jdbc-7.2.2.jre8.jar=lib\\mssql-jdbc-7.2.2.jre8.jar
 file.reference.mysql-connector-java-5.1.47.jar=lib\\mysql-connector-java-5.1.47.jar
