--- a/Dashboard/nbproject/project.properties
+++ b/Dashboard/nbproject/project.properties
@@ -56,7 +56,7 @@ file.reference.mariadb-java-client-2.4.1.jar=lib\\mariadb-java-client-2.4.1.jar
 file.reference.mssql-jdbc-7.2.2.jre8.jar=lib\\mssql-jdbc-7.2.2.jre8.jar
 file.reference.mysql-connector-java-5.1.47.jar=lib\\mysql-connector-java-5.1.47.jar
 file.reference.ojdbc8.jar=lib\\ojdbc8.jar
-file.reference.opentest4j-1.2.0.jar=/Daten/Dropbox/Studium/Semester_IV/Junit_src_files/opentest4j-1.2.0.jar
+file.reference.opentest4j-1.2.0.jar=lib\\opentest4j-1.2.0.jar
 file.reference.postgresql-42.2.5.jar=lib\\postgresql-42.2.5.jar
 includes=**
 # Non-JavaFX jar file creation is deactivated in JavaFX 2.0+ projects
