CLEAN JUnit lib

--- a/Dashboard/nbproject/project.properties
+++ b/Dashboard/nbproject/project.properties
@@ -73,7 +73,8 @@ javac.classpath=\
     ${file.reference.mssql-jdbc-7.2.2.jre8.jar}:\
     ${file.reference.mariadb-java-client-2.4.1.jar}:\
     ${file.reference.Dashboard-properties}:\
-    ${file.reference.Dashboard-dataStorage}
+    ${file.reference.Dashboard-dataStorage}:\
+    ${libs.junit_5.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
