CLEAN JUnit lib

--- a/Dashboard/nbproject/project.properties
+++ b/Dashboard/nbproject/project.properties
@@ -38,6 +38,7 @@ file.reference.commons-logging-1.2.jar=lib/commons-logging-1.2.jar
 file.reference.commons-pool2-2.6.2.jar=lib/commons-pool2-2.6.2.jar
 file.reference.Dashboard-dataStorage=dataStorage
 file.reference.Dashboard-properties=properties
+file.reference.Dashboard-testlib=testlib
 file.reference.junit-jupiter-5.4.2.jar=lib\\junit-jupiter-5.4.2.jar
 file.reference.junit-jupiter-api-5.4.2.jar=lib\\junit-jupiter-api-5.4.2.jar
 file.reference.junit-jupiter-engine-5.4.2.jar=lib\\junit-jupiter-engine-5.4.2.jar
@@ -74,7 +75,8 @@ javac.classpath=\
     ${file.reference.mariadb-java-client-2.4.1.jar}:\
     ${file.reference.Dashboard-properties}:\
     ${file.reference.Dashboard-dataStorage}:\
-    ${libs.junit_5.classpath}
+    ${libs.junit_5.classpath}:\
+    ${file.reference.Dashboard-testlib}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
