CLEAN JUnit lib

--- a/Dashboard/nbproject/project.properties
+++ b/Dashboard/nbproject/project.properties
@@ -42,7 +42,6 @@ file.reference.Dashboard-testlib=testlib
 file.reference.junit-jupiter-5.4.2.jar=lib\\junit-jupiter-5.4.2.jar
 file.reference.junit-jupiter-api-5.4.2.jar=lib\\junit-jupiter-api-5.4.2.jar
 file.reference.junit-jupiter-engine-5.4.2.jar=lib\\junit-jupiter-engine-5.4.2.jar
-file.reference.junit-jupiter-migrationsupport-5.4.2.jar=lib\\junit-jupiter-migrationsupport-5.4.2.jar
 file.reference.junit-jupiter-params-5.4.2.jar=lib\\junit-jupiter-params-5.4.2.jar
 file.reference.junit-platform-commons-1.4.2.jar=lib\\junit-platform-commons-1.4.2.jar
 file.reference.junit-platform-console-1.4.2.jar=lib\\junit-platform-console-1.4.2.jar
@@ -52,7 +51,9 @@ file.reference.junit-platform-launcher-1.4.2.jar=lib\\junit-platform-launcher-1.
 file.reference.junit-platform-reporting-1.4.2.jar=lib\\junit-platform-reporting-1.4.2.jar
 file.reference.junit-platform-runner-1.4.2.jar=lib\\junit-platform-runner-1.4.2.jar
 file.reference.junit-platform-suite-api-1.4.2.jar=lib\\junit-platform-suite-api-1.4.2.jar
+file.reference.junit-platform-suite-api-1.4.2.jar-1=testlib\\junit-platform-suite-api-1.4.2.jar
 file.reference.junit-platform-testkit-1.4.2.jar=lib\\junit-platform-testkit-1.4.2.jar
+file.reference.junit5-r5.4.2.zip-1=testlib\\junit5-r5.4.2.zip
 file.reference.mariadb-java-client-2.4.1.jar=lib\\mariadb-java-client-2.4.1.jar
 file.reference.mssql-jdbc-7.2.2.jre8.jar=lib\\mssql-jdbc-7.2.2.jre8.jar
 file.reference.mysql-connector-java-5.1.47.jar=lib\\mysql-connector-java-5.1.47.jar
@@ -75,7 +76,6 @@ javac.classpath=\
     ${file.reference.mariadb-java-client-2.4.1.jar}:\
     ${file.reference.Dashboard-properties}:\
     ${file.reference.Dashboard-dataStorage}:\
-    ${libs.junit_5.classpath}:\
     ${file.reference.Dashboard-testlib}
 # Space-separated list of extra javac options
 javac.compilerargs=
@@ -103,8 +103,9 @@ javac.test.classpath=\
     ${file.reference.junit-jupiter-5.4.2.jar}:\
     ${file.reference.junit-jupiter-api-5.4.2.jar}:\
     ${file.reference.junit-jupiter-engine-5.4.2.jar}:\
-    ${file.reference.junit-jupiter-migrationsupport-5.4.2.jar}:\
-    ${file.reference.junit-jupiter-params-5.4.2.jar}
+    ${file.reference.junit-jupiter-params-5.4.2.jar}:\
+    ${file.reference.junit-platform-suite-api-1.4.2.jar-1}:\
+    ${file.reference.junit5-r5.4.2.zip-1}
 javac.test.modulepath=\
     ${javac.modulepath}
 javac.test.processorpath=\
