--- a/Dashboard/nbproject/project.properties
+++ b/Dashboard/nbproject/project.properties
@@ -52,6 +52,7 @@ file.reference.junit-platform-runner-1.4.2.jar=testlib\\junit-platform-runner-1.
 file.reference.junit-platform-suite-api-1.4.2.jar=testlib\\junit-platform-suite-api-1.4.2.jar
 file.reference.junit-platform-suite-api-1.4.2.jar-1=testlib\\junit-platform-suite-api-1.4.2.jar
 file.reference.junit-platform-testkit-1.4.2.jar=testlib\\junit-platform-testkit-1.4.2.jar
+file.reference.testfx-core-4.0.0-20150226.214553-8.jar=testlib\\testfx-core-4.0.0-20150226.214553-8.jar
 file.reference.junit5-r5.4.2.zip-1=testlib\\junit5-r5.4.2.zip
 file.reference.mariadb-java-client-2.4.1.jar=lib\\mariadb-java-client-2.4.1.jar
 file.reference.mssql-jdbc-7.2.2.jre8.jar=lib\\mssql-jdbc-7.2.2.jre8.jar
@@ -103,6 +104,7 @@ javac.test.classpath=\
     ${file.reference.junit-jupiter-engine-5.4.2.jar}:\
     ${file.reference.junit-jupiter-params-5.4.2.jar}:\
     ${file.reference.junit-platform-suite-api-1.4.2.jar-1}:\
+    ${file.reference.testfx-core-4.0.0-20150226.214553-8.jar}:\
     ${file.reference.junit5-r5.4.2.zip-1}
 javac.test.modulepath=\
     ${javac.modulepath}
