ADD base for saving+loading XML via Xstream +small fixes

--- a/Dashboard/nbproject/project.properties
+++ b/Dashboard/nbproject/project.properties
@@ -38,6 +38,7 @@ file.reference.commons-logging-1.2.jar=lib/commons-logging-1.2.jar
 file.reference.commons-pool2-2.6.2.jar=lib/commons-pool2-2.6.2.jar
 file.reference.Dashboard-dataStorage=dataStorage
 file.reference.Dashboard-properties=properties
+file.reference.dom4j-1.6.1.jar=lib/dom4j-1.6.1.jar
 file.reference.junit-jupiter-5.4.2.jar=testlib\\junit-jupiter-5.4.2.jar
 file.reference.junit-jupiter-api-5.4.2.jar=testlib\\junit-jupiter-api-5.4.2.jar
 file.reference.junit-jupiter-engine-5.4.2.jar=testlib\\junit-jupiter-engine-5.4.2.jar
@@ -60,6 +61,9 @@ file.reference.mysql-connector-java-5.1.47.jar=lib\\mysql-connector-java-5.1.47.
 file.reference.ojdbc8.jar=lib\\ojdbc8.jar
 file.reference.opentest4j-1.2.0.jar=testlib\\opentest4j-1.2.0.jar
 file.reference.postgresql-42.2.5.jar=lib\\postgresql-42.2.5.jar
+file.reference.xmlpull-1.1.3.1.jar=lib/xmlpull-1.1.3.1.jar
+file.reference.xpp3_min-1.1.4c.jar=lib/xpp3_min-1.1.4c.jar
+file.reference.xstream-1.4.11.1.jar=lib/xstream-1.4.11.1.jar
 includes=**
 # Non-JavaFX jar file creation is deactivated in JavaFX 2.0+ projects
 jar.archive.disabled=true
@@ -75,7 +79,11 @@ javac.classpath=\
     ${file.reference.mssql-jdbc-7.2.2.jre8.jar}:\
     ${file.reference.mariadb-java-client-2.4.1.jar}:\
     ${file.reference.Dashboard-properties}:\
-    ${file.reference.Dashboard-dataStorage}
+    ${file.reference.Dashboard-dataStorage}:\
+    ${file.reference.xstream-1.4.11.1.jar}:\
+    ${file.reference.xpp3_min-1.1.4c.jar}:\
+    ${file.reference.xmlpull-1.1.3.1.jar}:\
+    ${file.reference.dom4j-1.6.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
