--- a/Dashboard/nbproject/project.properties
+++ b/Dashboard/nbproject/project.properties
@@ -36,8 +36,6 @@ excludes=
 file.reference.commons-dbcp2-2.6.0.jar=lib/commons-dbcp2-2.6.0.jar
 file.reference.commons-logging-1.2.jar=lib/commons-logging-1.2.jar
 file.reference.commons-pool2-2.6.2.jar=lib/commons-pool2-2.6.2.jar
-file.reference.Dashboard-dataStorage=dataStorage
-file.reference.Dashboard-properties=properties
 file.reference.dom4j-1.6.1.jar=lib/dom4j-1.6.1.jar
 file.reference.junit-jupiter-5.4.2.jar=testlib\\junit-jupiter-5.4.2.jar
 file.reference.junit-jupiter-api-5.4.2.jar=testlib\\junit-jupiter-api-5.4.2.jar
@@ -78,8 +76,6 @@ javac.classpath=\
     ${file.reference.ojdbc8.jar}:\
     ${file.reference.mssql-jdbc-7.2.2.jre8.jar}:\
     ${file.reference.mariadb-java-client-2.4.1.jar}:\
-    ${file.reference.Dashboard-properties}:\
-    ${file.reference.Dashboard-dataStorage}:\
     ${file.reference.xstream-1.4.11.1.jar}:\
     ${file.reference.xpp3_min-1.1.4c.jar}:\
     ${file.reference.xmlpull-1.1.3.1.jar}:\
@@ -136,11 +132,16 @@ javafx.classpath.extension=\
     ${java.home}/lib/javaws.jar:\
     ${java.home}/lib/deploy.jar:\
     ${java.home}/lib/plugin.jar
+javafx.deploy.adddesktopshortcut=false
+javafx.deploy.addstartmenushortcut=false
 javafx.deploy.allowoffline=true
 # If true, application update mode is set to 'background', if false, update mode is set to 'eager'
 javafx.deploy.backgroundupdate=false
+javafx.deploy.disable.proxy=false
 javafx.deploy.embedJNLP=true
 javafx.deploy.includeDT=true
+javafx.deploy.installpermanently=false
+javafx.deploy.permissionselevated=false
 # Set true to prevent creation of temporary copy of deployment artifacts before each run (disables concurrent runs)
 javafx.disable.concurrent.runs=false
 # Set true to enable multiple concurrent runs of the same WebStart or Run-in-Browser project
@@ -161,6 +162,9 @@ javafx.preloader.type=none
 javafx.rebase.libs=false
 javafx.run.height=600
 javafx.run.width=800
+javafx.signing.blob=false
+javafx.signing.enabled=false
+javafx.signing.type=notsigned
 jlink.launcher=false
 jlink.launcher.name=Dashboard
 # Pre-JavaFX 2.0 WebStart is deactivated in JavaFX 2.0+ projects
@@ -174,6 +178,7 @@ manifest.custom.permissions=
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
+native.bundling.enabled=false
 platform.active=default_platform
 run.classpath=\
     ${javac.classpath}:\
