--- a/Dashboard/nbproject/project.properties
+++ b/Dashboard/nbproject/project.properties
@@ -33,10 +33,8 @@ dist.jar=${dist.dir}/Dashboard.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.commons-dbcp2-2.6.0.jar=lib/commons-dbcp2-2.6.0.jar
-file.reference.commons-logging-1.2.jar=lib/commons-logging-1.2.jar
-file.reference.commons-pool2-2.6.2.jar=lib/commons-pool2-2.6.2.jar
-file.reference.dom4j-1.6.1.jar=lib/dom4j-1.6.1.jar
+file.reference.commons-dbcp2-2.6.0.jar=src/lib/commons-dbcp2-2.6.0.jar
+file.reference.commons-pool2-2.6.2.jar=src/lib/commons-pool2-2.6.2.jar
 file.reference.junit-jupiter-5.4.2.jar=testlib\\junit-jupiter-5.4.2.jar
 file.reference.junit-jupiter-api-5.4.2.jar=testlib\\junit-jupiter-api-5.4.2.jar
 file.reference.junit-jupiter-engine-5.4.2.jar=testlib\\junit-jupiter-engine-5.4.2.jar
@@ -51,17 +49,17 @@ file.reference.junit-platform-runner-1.4.2.jar=testlib\\junit-platform-runner-1.
 file.reference.junit-platform-suite-api-1.4.2.jar=testlib\\junit-platform-suite-api-1.4.2.jar
 file.reference.junit-platform-suite-api-1.4.2.jar-1=testlib\\junit-platform-suite-api-1.4.2.jar
 file.reference.junit-platform-testkit-1.4.2.jar=testlib\\junit-platform-testkit-1.4.2.jar
+file.reference.mariadb-java-client-2.4.1.jar=src/lib/mariadb-java-client-2.4.1.jar
+file.reference.mssql-jdbc-7.2.2.jre8.jar=src/lib/mssql-jdbc-7.2.2.jre8.jar
+file.reference.mysql-connector-java-5.1.47.jar=src/lib/mysql-connector-java-5.1.47.jar
+file.reference.ojdbc8.jar=src/lib/ojdbc8.jar
+file.reference.postgresql-42.2.5.jar=src/lib/postgresql-42.2.5.jar
 file.reference.testfx-core-4.0.0-20150226.214553-8.jar=testlib\\testfx-core-4.0.0-20150226.214553-8.jar
 file.reference.junit5-r5.4.2.zip-1=testlib\\junit5-r5.4.2.zip
-file.reference.mariadb-java-client-2.4.1.jar=lib\\mariadb-java-client-2.4.1.jar
-file.reference.mssql-jdbc-7.2.2.jre8.jar=lib\\mssql-jdbc-7.2.2.jre8.jar
-file.reference.mysql-connector-java-5.1.47.jar=lib\\mysql-connector-java-5.1.47.jar
-file.reference.ojdbc8.jar=lib\\ojdbc8.jar
 file.reference.opentest4j-1.2.0.jar=testlib\\opentest4j-1.2.0.jar
-file.reference.postgresql-42.2.5.jar=lib\\postgresql-42.2.5.jar
-file.reference.xmlpull-1.1.3.1.jar=lib/xmlpull-1.1.3.1.jar
-file.reference.xpp3_min-1.1.4c.jar=lib/xpp3_min-1.1.4c.jar
-file.reference.xstream-1.4.11.1.jar=lib/xstream-1.4.11.1.jar
+file.reference.xmlpull-1.1.3.1.jar=src/lib/xmlpull-1.1.3.1.jar
+file.reference.xpp3_min-1.1.4c.jar=src/lib/xpp3_min-1.1.4c.jar
+file.reference.xstream-1.4.11.1.jar=src/lib/xstream-1.4.11.1.jar
 includes=**
 # Non-JavaFX jar file creation is deactivated in JavaFX 2.0+ projects
 jar.archive.disabled=true
@@ -69,17 +67,15 @@ jar.compress=false
 javac.classpath=\
     ${javafx.classpath.extension}:\
     ${file.reference.commons-dbcp2-2.6.0.jar}:\
-    ${file.reference.commons-logging-1.2.jar}:\
     ${file.reference.commons-pool2-2.6.2.jar}:\
-    ${file.reference.postgresql-42.2.5.jar}:\
+    ${file.reference.mariadb-java-client-2.4.1.jar}:\
+    ${file.reference.mssql-jdbc-7.2.2.jre8.jar}:\
     ${file.reference.mysql-connector-java-5.1.47.jar}:\
     ${file.reference.ojdbc8.jar}:\
-    ${file.reference.mssql-jdbc-7.2.2.jre8.jar}:\
-    ${file.reference.mariadb-java-client-2.4.1.jar}:\
-    ${file.reference.xstream-1.4.11.1.jar}:\
-    ${file.reference.xpp3_min-1.1.4c.jar}:\
+    ${file.reference.postgresql-42.2.5.jar}:\
     ${file.reference.xmlpull-1.1.3.1.jar}:\
-    ${file.reference.dom4j-1.6.1.jar}
+    ${file.reference.xpp3_min-1.1.4c.jar}:\
+    ${file.reference.xstream-1.4.11.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
