--- a/Dashboard/nbproject/project.properties
+++ b/Dashboard/nbproject/project.properties
@@ -34,6 +34,7 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 file.reference.commons-dbcp2-2.6.0.jar=src/lib/commons-dbcp2-2.6.0.jar
+file.reference.commons-logging-1.2.jar=src/lib/commons-logging-1.2.jar
 file.reference.commons-pool2-2.6.2.jar=src/lib/commons-pool2-2.6.2.jar
 file.reference.junit-jupiter-5.4.2.jar=testlib\\junit-jupiter-5.4.2.jar
 file.reference.junit-jupiter-api-5.4.2.jar=testlib\\junit-jupiter-api-5.4.2.jar
@@ -57,9 +58,6 @@ file.reference.postgresql-42.2.5.jar=src/lib/postgresql-42.2.5.jar
 file.reference.testfx-core-4.0.0-20150226.214553-8.jar=testlib\\testfx-core-4.0.0-20150226.214553-8.jar
 file.reference.junit5-r5.4.2.zip-1=testlib\\junit5-r5.4.2.zip
 file.reference.opentest4j-1.2.0.jar=testlib\\opentest4j-1.2.0.jar
-file.reference.xmlpull-1.1.3.1.jar=src/lib/xmlpull-1.1.3.1.jar
-file.reference.xpp3_min-1.1.4c.jar=src/lib/xpp3_min-1.1.4c.jar
-file.reference.xstream-1.4.11.1.jar=src/lib/xstream-1.4.11.1.jar
 includes=**
 # Non-JavaFX jar file creation is deactivated in JavaFX 2.0+ projects
 jar.archive.disabled=true
@@ -73,9 +71,7 @@ javac.classpath=\
     ${file.reference.mysql-connector-java-5.1.47.jar}:\
     ${file.reference.ojdbc8.jar}:\
     ${file.reference.postgresql-42.2.5.jar}:\
-    ${file.reference.xmlpull-1.1.3.1.jar}:\
-    ${file.reference.xpp3_min-1.1.4c.jar}:\
-    ${file.reference.xstream-1.4.11.1.jar}
+    ${file.reference.commons-logging-1.2.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
