--- a/Dashboard/nbproject/project.properties
+++ b/Dashboard/nbproject/project.properties
@@ -58,9 +58,9 @@ file.reference.postgresql-42.2.5.jar=src/lib/postgresql-42.2.5.jar
 file.reference.testfx-core-4.0.0-20150226.214553-8.jar=testlib\\testfx-core-4.0.0-20150226.214553-8.jar
 file.reference.junit5-r5.4.2.zip-1=testlib\\junit5-r5.4.2.zip
 file.reference.opentest4j-1.2.0.jar=testlib\\opentest4j-1.2.0.jar
-file.reference.opentest4j-1.2.0.jar=testlib\\testFx-3.1.2.jar
-file.reference.opentest4j-1.2.0.jar=testlib\\hamcrest-all-1.3.jar
-file.reference.opentest4j-1.2.0.jar=testlib\\guava-14.0.1.jar
+file.reference.testFx-3.1.2.jar=testlib\\testFx-3.1.2.jar
+file.reference.hamcrest-all-1.3.jar=testlib\\hamcrest-all-1.3.jar
+file.reference.guava-14.0.1.jar=testlib\\guava-14.0.1.jar
 includes=**
 # Non-JavaFX jar file creation is deactivated in JavaFX 2.0+ projects
 jar.archive.disabled=true
