--- a/Dashboard/nbproject/project.properties
+++ b/Dashboard/nbproject/project.properties
@@ -105,6 +105,10 @@ javac.test.classpath=\
     ${file.reference.junit-platform-suite-api-1.4.2.jar-1}:\
     ${file.reference.testfx-core-4.0.0-20150226.214553-8.jar}:\
     ${file.reference.junit5-r5.4.2.zip-1}
+    ${file.reference.testFx-3.1.2.jar}
+    ${file.reference.hamcrest-all-1.3.jar}
+    ${file.reference.guava-14.0.1.jar}
+    
 javac.test.modulepath=\
     ${javac.modulepath}
 javac.test.processorpath=\
