--- a/Dashboard/nbproject/project.properties
+++ b/Dashboard/nbproject/project.properties
@@ -105,11 +105,11 @@ javac.test.classpath=\
     ${file.reference.junit-jupiter-params-5.4.2.jar}:\
     ${file.reference.junit-platform-suite-api-1.4.2.jar-1}:\
     ${file.reference.testfx-core-4.0.15-alpha.jar}:\
-    $(file.reference.testfx-junit-4.0.15-alpha.jar)\
-    ${file.reference.junit5-r5.4.2.zip-1}\
-    ${file.reference.testFx-3.1.2.jar}\
-    ${file.reference.hamcrest-all-1.3.jar}\
-    ${file.reference.guava-14.0.1.jar}\
+    $(file.reference.testfx-junit-4.0.15-alpha.jar):\
+    ${file.reference.junit5-r5.4.2.zip-1}:\
+    ${file.reference.testFx-3.1.2.jar}:\
+    ${file.reference.hamcrest-all-1.3.jar}:\
+    ${file.reference.guava-14.0.1.jar}
     
 javac.test.modulepath=\
     ${javac.modulepath}
