--- a/Dashboard/nbproject/project.properties
+++ b/Dashboard/nbproject/project.properties
@@ -56,7 +56,7 @@ file.reference.mysql-connector-java-5.1.47.jar=src/lib/mysql-connector-java-5.1.
 file.reference.ojdbc8.jar=src/lib/ojdbc8.jar
 file.reference.postgresql-42.2.5.jar=src/lib/postgresql-42.2.5.jar
 file.reference.testfx-core-4.0.15-alpha.jar=testlib\\testfx-core-4.0.15-alpha.jar
-file.reference.testfx-junit-4.0.15-alpha.jar=testlib\\testfx-junit5-4.0.15-alpha.jar
+file.reference.testfx-junit5-4.0.15-alpha.jar=testlib\\testfx-junit5-4.0.15-alpha.jar
 file.reference.junit5-r5.4.2.zip-1=testlib\\junit5-r5.4.2.zip
 file.reference.opentest4j-1.2.0.jar=testlib\\opentest4j-1.2.0.jar
 file.reference.testFx-3.1.2.jar=testlib\\testFx-3.1.2.jar
