--- a/Dashboard/nbproject/project.properties
+++ b/Dashboard/nbproject/project.properties
@@ -107,7 +107,7 @@ javac.test.classpath=\
     ${file.reference.junit-jupiter-params-5.4.2.jar}:\
     ${file.reference.junit-platform-suite-api-1.4.2.jar-1}:\
     ${file.reference.testfx-core-4.0.15-alpha.jar}:\
-    $(file.reference.testfx-junit5-4.0.15-alpha.jar):\
+    ${file.reference.testfx-junit5-4.0.15-alpha.jar}:\
     ${file.reference.junit5-r5.4.2.zip-1}:\
     ${file.reference.testFx-3.1.2.jar}:\
     ${file.reference.hamcrest-all-1.3.jar}:\
